2019-03-29 James Phillips <james@jamesphillipsuk.com>
	*main.c: printFile() now uses our textFile, and nothing is printed directly to the screen from the file without being saved in the textFile first.
	
	*CHANGELOG: Documented recent changes.

2019-03-28 James Phillips <james@jamesphillipsuk.com>
	*main.c: Added typedef and struct for handling text files, called "textFile".
	Implemented textFile in printFile() to copy the file to the struct.
	
	*CHANGELOG: Documented recent changes.
	
	2019-03-27 James Phillips <james@jamesphillipsuk.com>
	*main.c: Added further code documentation.
	Fixed some dates.
	Added overwrite protection to file writing.
	
	*CHANGELOG: Documented recent changes.

	*.gitignore: Added .gitignore

2018-12-12 James Phillips <james@jamesphillipsuk.com>
	*main.c: Added functions to handle terminal args.

	*README.md: Rewrote sections on use and bug tracking.
	
	*CHANGELOG: Documented recent changes.
	
2018-12-11 James Phillips <james@jamesphillipsuk.com>
	*main.c: Begin total rewrite of the code.

	*main.c.old: Moved legacy code to main.c.old for documentation and reference.
	
	*CHANGELOG: Documented recent changes.

2017-03-12 James Phillips <james@jamesphillipsuk.com>
	*main.c: Altered typo in initial comment block and drawintroproc (The Project started in April, not March).
	Added errno.h for enhanced error handling, and updated file opening to match.
	Added the same functionality for the back arrow as the up.
	Re-altered the up-arrow press.
	
	*CHANGELOG: Documented recent changes.

2016-10-03 James Phillips <james@jamesphillipsuk.com>
	*main.c: Renamed program - from MyProg to Aviate.
	Changed program name in copyproc, drawintroproc, and drawmainproc.
	Changed version number to Public Alpha 2.2.
	Completely rewrote up arrow case again, it's all about figuring out more efficient ways to do things.
	
	*makefile: Added Aviate as a target.
	
	*CHANGELOG: Documented recent changes.
	
2016-10-02 James Phillips <james@jamesphillipsuk.com>